# HardTodo

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.yaml
.sqlx/: query-248e7a9d4f5a5914921c294a61c5f0acd0c2ed84406a6738a09fbe3abea10b50.json  query-24b2a9bed14a790e797df61d0107fe7ff533a7a8f7ca67f353ebe2d4acd16ff6.json  query-3ae49fab45107adc964e68e66bf84cd00a58fd8d2b3fd7fc3999a913be112bf3.json  query-b5fdd6fa59b3299149a95862415b36536a1c6d93d77a910d87c881caa8f5b880.json  query-bb981ee6ce8d830f5a3c297cd91d1ee275d73cd3c68137cb07e53446e1f6b699.json  query-c3dbad41e2f1bc5c1184933ea21ee6ba2ee0e5c00d59a446ecccb670800bd6e6.json  query-c77a4f50a52a0d8be79d0be905f28229f0f216e07cfc6fd5710064458997379c.json
migrations/: 20260320233834_create_users.sql  20260320234355_create_todos.sql
src/: config.rs  db.rs  errors.rs  handlers.rs  lib.rs  main.rs  modules.rs
src/auth/: extractor.rs  mod.rs  user.rs
src/http/: db.rs  errors.rs  handlers.rs  mod.rs  modules.rs
