[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros"] }
axum = "0.8.8"
dashmap = "7.0.0-rc2"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
