[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros"] }
axum = "0.8.8"
dashmap = "7.0.0-rc2"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
log = "0.4.29"
thiserror = "2.0.18"
tracing = "0.1.44"
